# thoughtful-investor

./: .gitignore  Dockerfile  README.md  pyproject.toml
tests/: test_thoughtful_investor.py
thoughtful_investor/: __init__.py  bot.py  main.py  markov.py  signals.py
thoughtful_investor/handlers/: __init__.py  catchalls.py  errors.py
thoughtful_investor/handlers/commands/: __init__.py  donates.py  markov.py  others.py  says.py
